--- a/app/views/leaves/edit.html.erb
+++ b/app/views/leaves/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing leafe</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @leave %> |
-<%= link_to 'Back', leaves_path %>
+<h1>Editing leave</h1>
+<div class="form-container">
+    <%= render 'update_form' %>
+    <%= link_to 'Back', ttf_pending_leave_path %>
+</div>
