--- a/app/assets/stylesheets/leaves.css.scss
+++ b/app/assets/stylesheets/leaves.css.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Leaves controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+select.custom {
+  padding: 0px;
+}
+select.custom-small {
+  display: inline-block;
+  padding: 0;
+  width: 15%;
+}
+.form-container{
+  width: 60%;
+  margin: auto;
+  textarea, select {
+    max-width: 50%;
+  }
+}
