--- a/app/views/dashboard/_accept_leave_form.html.erb
+++ b/app/views/dashboard/_accept_leave_form.html.erb
@@ -1,18 +1,11 @@
-<div class="col-lg-12">
-  <div class="span"> User: <%=leave.user.email %>  </div>
-    <%= form_for(leave) do |f| %>
-        <div class="fields">
-          <%= f.label :start_date %><br>
-          <%= f.object.start_date %>
-        </div>
-        <div class="fields"><%= f.object.end_date %></div>
-        <div class="fields"><%= f.object.leave_type %> </div>
-        <div class="fields"><%= get_left_leave_hours(f.object.leave_type, f.object.user) %> </div>
-        <div class="fields"><%= get_left_leave_hours(f.object.leave_type, f.object.user) %> </div>
-      <div class="fields"><%= f.select :leave_status, options_for_select([['Pending', 'PENDING'], ['Recommanded', 'RECOMMANDED'], ['Not Recommanded', 'NOT_RECOMANDED']]) %> </div>
-      <div class="actions">
-        <%= f.submit %>
-      </div>
+ <tr>
+    <td><%=leave.user.email %></td>
+    <td> <%= leave.start_date %></td>
+    <td> <%= leave.end_date %></td>
+    <td> <%= leave.leave_type %></td>
+    <td> <%= leave.user.hours_left(leave.leave_type) %></td>
+    <td><%= leave.leave_status %>        <td>
+    <td><%= link_to "Update", edit_leafe_path(leave) %></td>
+  </tr>
 
-    <% end %>
-</div>
+
