--- a/app/views/leaves/new.html.erb
+++ b/app/views/leaves/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Leave</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', leaves_path %>
+<div class="form-container">
+    <h1>New Leave</h1>
+    <%= render 'form' %>
+    <%= link_to 'Back', leaves_path %>
+</div>
