--- a/app/views/dashboard/ttf_leave_application.html.erb
+++ b/app/views/dashboard/ttf_leave_application.html.erb
@@ -9,6 +9,7 @@
         <th>End Date</th>
         <th>Sick Type</th>
         <th>Available Hours</th>
+        <th>Total Days</th>
         <th>Status</th>
         <th>Action</th>
     </thead>
