--- a/app/views/leaves/_update_form.html.erb
+++ b/app/views/leaves/_update_form.html.erb
@@ -33,7 +33,7 @@
 
     <div class="field">
         <%= f.label :leave_status %><br>
-        <%= f.select :leave_status, options_for_select([['Pending', 'PENDING'], ['Recommanded', 'RECOMMANDED'], ['Not Recommanded', 'NOT_RECOMANDED']]) %>
+        <%= f.select :leave_status, options_for_select([['Pending', 'PENDING'], ['Recommended', 'RECOMMENDED'], ['Not Recommended', 'NOT_RECOMENDED']]) %>
     </div>
 
     <div class="field">
