--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -20,4 +20,14 @@
           <span> Leave Consumed: <%= @user.total_sick_consume || 0.0 %> Hours</span>
         </div>
     </div>
+
+
+  <div id="pending" class="col-lg-6">
+    <h3>Pending Leave</h3>
+    <%= render :partial => "leaves/leaves" , :locals =>{ :leaves => get_leaves_by_status(@user, "PENDING")} %>
+  </div>
+  <div id="recommended" class="col-lg-6">
+    <h3>Recommended Leave</h3>
+    <%= render :partial => "leaves/leaves" , :locals =>{ :leaves => get_leaves_by_status(@user, "RECOMMENDED")} %>
+  </div>
 </div>
