Add google omniauth

--- a/app/assets/stylesheets/leaves.css.scss
+++ b/app/assets/stylesheets/leaves.css.scss
@@ -16,3 +16,12 @@ select.custom-small {
     max-width: 50%;
   }
 }
+
+.waring-message{
+  padding-top: 70px;
+}
+
+
+nav.navbar-fixed-top {
+   margin-bottom: 50px;
+}
