--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,12 @@
 <body>
 <div class="container">
   <%= render '/shared/top_nav' %>
-
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+  <% if flash[:notice] || flash[:alert]%>
+      <div class="waring-message alert alert-warning">
+        <p class="notice" id="notice"><%= notice %></p>
+        <p class="alert" id="alert"><%= alert %></p>
+      </div>
+  <% end %>
    <%= yield %>
 </div>
 </body>
